--- a/curso-2019.bib
+++ b/curso-2019.bib
@@ -1,3 +1,84 @@
+@Book{2012The-handbook-of-Hisp,
+author = {}, 
+title = {The handbook of Hispanic linguistics}, 
+volume = {}, 
+pages = {}, 
+editor = {Hualde, José Ignacio and Olarrea, Antxon and O'Rourke, Erin}, 
+publisher = {Wiley-Blackwell}, 
+address = {Malden, MA; Oxford}, 
+year = {2012}, 
+abstract = {}, 
+keywords = {Spanish language; curso-lengua; curso-sintaxis}}
+
+
+@Book{2016Enciclopedia-de-Linguistica,
+author = {}, 
+title = {Enciclopedia de Lingüística Hispánica}, 
+volume = {1 y 2}, 
+pages = {}, 
+editor = {Gutiérrez-Rexach, Javier}, 
+publisher = {Routledge}, 
+address = {Milton Park, Abingdon, Oxon; New York, NY}, 
+year = {2016}, 
+abstract = {}, 
+keywords = {History, Romance languages, Spanish language, Dictionaries, Encyclopedias and dictionaries, Spanish, Romance philology, Spanish philology}}
+
+	
+
+@Book{Escandell-Vidal2014Claves-del-leng,
+author = {Escandell-Vidal, María Victoria}, 
+title = {Claves del lenguaje humano}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Centro de Estudios Ramón Areces}, 
+address = {Madrid}, 
+year = {2014}, 
+abstract = {}, 
+keywords = {}}
+
+
+@Book{Mendivil-Giro2003Gramatica-natur,
+author = {Mendívil-Giró, José-Luis}, 
+title = {Gramática natural: la gramática generativa y la tercera cultura}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {A. Machado Libros}, 
+address = {Boadilla del Monte (Madrid)}, 
+year = {2003}, 
+abstract = {}, 
+keywords = {}}
+
+
+
+@Book{Mendivil-Giro2015El-cambio-linguistic,
+author = {Mendívil-Giró, José-Luis}, 
+title = {El cambio lingüístico: sus causas, mecanismos y consecuencias}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Editorial Síntesis}, 
+address = {Madrid}, 
+year = {2015}, 
+abstract = {}, 
+keywords = {Direction in language; Language and languages; Variation; Linguistic change}}
+
+
+
+@Book{Moreno-Cabrera2014On-biology-history-a,
+author = {Moreno-Cabrera, Juan Carlos and Mendívil-Giró, José-Luis}, 
+title = {On biology, history and culture in human language: a critical overview}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Equinox}, 
+address = {Sheffield, UK; Bristol, CT}, 
+year = {2014}, 
+abstract = {}, 
+keywords = {Biolinguistics; Historical Linguistics; Language and culture}}
+
+
 @Book{Sandler2006Sign,
 author = {Sandler, Wendy and Lillo-Martin, Diane}, 
 title = {Sign Language and Linguistic Universals}, 
