--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,164 @@
 
+@Book{		  sheehan2017final-a,
+  author	= {Sheehan, Michelle and Biberauer, Theresa and Roberts, Ian
+		  and Pesetsky, David and Holmberg, Anders},
+  pages		= {464},
+  publisher	= {MIT Press},
+  title		= {The Final-Over-Final Condition},
+  year		= {2017}
+}
+
+@Book{		  moro2018be,
+  author	= {Moro, Andrea},
+  pages		= {304},
+  publisher	= {MIT Press},
+  title		= {A Brief History of the Verb To Be},
+  year		= {2018}
+}
+
+@Book{		  bowers2018deriving,
+  address	= {London},
+  author	= {Bowers, John},
+  publisher	= {Cambridge},
+  title		= {Deriving syntactic relations},
+  year		= {2018}
+}
+
+@Book{		  ramchand2018situations,
+  author	= {Ramchand, Gillian},
+  pages		= {235},
+  publisher	= {Linguistic Inquiry Monographs},
+  title		= {Situations and Syntactic Structures},
+  year		= {2018}
+}
+
+@Book{		  cinque2010adjectives,
+  author	= {Cinque, Guglielmo},
+  pages		= {202},
+  publisher	= {MIT Press},
+  title		= {The Syntax of Adjectives},
+  year		= {2010}
+}
+
+@Book{		  moro2008babel,
+  author	= {Moro, Andrea},
+  pages		= {257},
+  publisher	= {Mit Press},
+  title		= {The Boundaries of Babel},
+  year		= {2008}
+}
+
+@Book{		  collins2012imposters,
+  author	= {Collins, Chris and Postal, Paul Martin},
+  pages		= {274},
+  publisher	= {MIT Press},
+  title		= {Imposters},
+  year		= {2012}
+}
+
+@Book{		  pylkkanen2008introducing,
+  author	= {Pylkk{\"a}nen, Liina},
+  pages		= {156},
+  publisher	= {MIT Press},
+  title		= {Introducing Arguments},
+  year		= {2008}
+}
+
+@InBook{	  clark2015first-words,
+  author	= {Clark, Eve V.},
+  booktitle	= {The Oxford Handbook of the Word},
+  editor	= {Taylor, John R},
+  publisher	= {Oxford University Press},
+  title		= {First Words},
+  year		= {2015}
+}
+
+@Book{		  pieraccini2012voice,
+  author	= {Pieraccini, Roberto},
+  pages		= {325},
+  publisher	= {MIT Press},
+  title		= {The Voice in the Machine},
+  year		= {2012}
+}
+
+@Book{		  hanson2009kiparsky,
+  author	= {Hanson, Kristin and Inkelas, Sharon},
+  pages		= {750},
+  publisher	= {Mit Press},
+  title		= {The Nature of the Word. Studies in honor of Paul
+		  Kiparsky},
+  year		= {2009}
+}
+
+@Book{		  chomsky2014minimalist,
+  author	= {Chomsky, Noam},
+  pages		= {408},
+  publisher	= {MIT Press},
+  title		= {The Minimalist Program},
+  year		= {2014}
+}
+
+@InBook{	  estes2015words,
+  author	= {Estes, Katharine Graf},
+  booktitle	= {The Oxford Handbook of the Word},
+  editor	= {Taylor, John R},
+  publisher	= {Oxford University Press},
+  title		= {How Infants Find Words},
+  year		= {2015}
+}
+
+@Article{	  magraner2012,
+  author	= {Magraner, Ana Pellicer and Baixauli Fortea, Inmaculada},
+  journal	= {Bolet{\'i}n de AELFA},
+  number	= {2},
+  pages		= {67--75},
+  title		= {Intervenci{\'o}n preventiva en las dificultades de la
+		  lectura y la escritura},
+  volume	= {12},
+  year		= {2012}
+}
+
+@Article{	  bloom2001precis,
+  author	= {Bloom, Paul},
+  journal	= {Behav Brain Sci},
+  number	= {6},
+  pages		= {1095--103; discussion 1104},
+  title		= {Pr{\'e}cis of How children learn the meanings of words},
+  volume	= {24},
+  year		= {2001}
+}
+
+@InBook{	  rizzi2015cartography,
+  address	= {New York},
+  author	= {Rizzi, Luigi},
+  booktitle	= {Beyond Functional Sequence},
+  editor	= {Shlonsky, Ur},
+  publisher	= {Oxford University Press},
+  title		= {Cartography, Criteria, and Labeling},
+  year		= {2015}
+}
+
+@InBook{	  rizzi2015subjects,
+  address	= {Amsterdam},
+  author	= {Rizzi, Luigi},
+  booktitle	= {Structures, Strategies and Beyond: Studies in honour of
+		  Adriana Belletti},
+  editor	= {Di Domenico, Elisa and Hamann, Cornelia and Matteini,
+		  Simona},
+  pages		= {19-46},
+  publisher	= {John Benjamins},
+  title		= {Notes on labeling and subject positions},
+  year		= {2015}
+}
+
+@Book{		  sandler2006sign,
+  author	= {Sandler, Wendy and Lillo-Martin, Diane},
+  pages		= {547},
+  publisher	= {Cambridge University Press},
+  title		= {Sign Language and Linguistic Universals},
+  year		= {2006}
+}
+
 @PhDThesis{	  hiu2015epistemicism,
   address	= {Austin},
   author	= {Hiu, Ivan J.},
