--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  marin2004pasiva,
+  author	= {Rafael Mar{\'i}n},
+  journal	= {Verba: Anuario galego de filoloxia},
+  title		= {Sobre pasivas adjetivales},
+  volume	= {31},
+  year		= {2004}
+}
+
 @Article{	  magraner2012,
   author	= {Magraner, Ana Pellicer and Baixauli Fortea, Inmaculada},
   journal	= {Bolet{\'i}n de AELFA},
@@ -203,7 +211,7 @@
 @Article{	  arregi2020specificational,
   author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
 		  Martina},
-  journal	= {Natural Language \& Linguistic Theory},
+  journal	= {Natural Language & Linguistic Theory},
   title		= {Three arguments for an individual concept analysis of
 		  specificational sentences},
   year		= {2020}
