--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Article{	  chomsky2019ucla,
+  author	= {Chomsky, Noam},
+  title		= {The UCLA Lectures},
+  year		= {2019}
+}
+
+@Article{	  chomsky2017galilean,
+  author	= {Chomsky, Noam},
+  journal	= {Journal of Physics: Conference Series},
+  pages		= {012015},
+  title		= {The Galilean Challenge: Architecture and Evolution of
+		  Language},
+  volume	= {880},
+  year		= {2017}
+}
+
+@Article{	  chomsky2019reading,
+  author	= {Chomsky, Noam},
+  journal	= {Catalan Journal of Linguistics},
+  pages		= {263--285},
+  title		= {Alguns problemes fonamentals desconcertants: el programa
+		  de Reading (Some puzzling foundational issues. The Reading
+		  Program)},
+  year		= {2019}
+}
+
+@Article{	  marin2004pasivas,
+  author	= {Rafael, Mar{\'i}n},
+  journal	= {Verba. Anuario Galego de Filolox{\'i}a},
+  title		= {Sobre pasivas adjetivales},
+  volume	= {31},
+  year		= {2004}
+}
+
 @Article{	  marin2004pasiva,
   author	= {Rafael Mar{\'i}n},
   journal	= {Verba: Anuario galego de filoloxia},
@@ -211,7 +245,7 @@
 @Article{	  arregi2020specificational,
   author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
 		  Martina},
-  journal	= {Natural Language & Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
   title		= {Three arguments for an individual concept analysis of
 		  specificational sentences},
   year		= {2020}
