--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,77 @@
 
+@Article{	  wermke2017fundamental,
+  author	= {Wermke, Kathleen and Ruan, Yufang and Feng, Yung and
+		  Dobnig, Daniela and Stephan, Sophia and Wermke, Peter and
+		  Ma, Li and Chang, Hongyu and Liu, Youyi and Hesse, Volker
+		  and Shu, Hua},
+  journal	= {Journal of Voice},
+  number	= {2},
+  pages		= {255.e25--255.e30},
+  title		= {Fundamental Frequency Variation in Crying of Mandarin and
+		  German Neonates.},
+  volume	= {31},
+  year		= {2017}
+}
+
+@Article{	  huybregts2017phonemic,
+  author	= {Huybregts, MAC (Riny)},
+  journal	= {Neurosci Biobehav Rev},
+  number	= {Pt B},
+  pages		= {279--294},
+  title		= {Phonemic clicks and the mapping asymmetry: How language
+		  emerged and speech developed.},
+  volume	= {81},
+  year		= {2017}
+}
+
+@Article{	  yang2017growth,
+  author	= {Yang, Charles and Crain, Stephen and Berwick, Robert C.
+		  and Chomsky, Noam and Bolhuis, Johan J.},
+  journal	= {Neurosci Biobehav Rev},
+  number	= {Pt B},
+  pages		= {103--119},
+  title		= {The growth of language: Universal Grammar, experience, and
+		  principles of computation.},
+  volume	= {81},
+  year		= {2017}
+}
+
+@Article{	  cinque2020isogloss,
+  author	= {Cinque, Guglielmo},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  pages		= {1},
+  title		= {An interview with Guglielmo Cinque},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  mendivil2020evolutioo,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {Inference Review},
+  number	= {2},
+  title		= {On Language Evolution},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  leivada2020misuee,
+  author	= {Leivada, Evelina},
+  journal	= {Inference Review},
+  number	= {2},
+  title		= {Misused Terms in Linguistics},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  uriagerekal2020endearment,
+  author	= {Uriagereka, Juan},
+  journal	= {Inference Review},
+  number	= {2},
+  title		= {Terms of EndearmentOn Language Evolution},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Article{	  chomsky2019ucla,
   author	= {Chomsky, Noam},
   title		= {The UCLA Lectures},
