--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45,7 +45,7 @@
   year		= {2020}
 }
 
-@Article{	  mendivil2020evolutioo,
+@Article{	  mendivil2020evolution,
   author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
   journal	= {Inference Review},
   number	= {2},
