--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,121 @@
 
+@Book{		  lasersohn2016subjectivity,
+  author	= {Lasersohn, Peter},
+  pages		= {304},
+  publisher	= {Oxford University Press},
+  title		= {Subjectivity and Perspective in Truth-Theoretic
+		  Semantics},
+  year		= {2016}
+}
+
+@Book{		  lobina2017recursion,
+  author	= {Lobina, David J.},
+  pages		= {256},
+  publisher	= {Oxford University Press},
+  title		= {Recursion},
+  year		= {2017}
+}
+
+@Book{		  hornstein2018syntactic,
+  address	= {Berlin},
+  editor	= {Hornstein, Norbert and Lasnik, Howard and Patel-Grosz,
+		  Pritty and Yang, Charles},
+  pages		= {463},
+  publisher	= {Walter de Gruyter},
+  title		= {Syntactic Structures after 60 Years},
+  year		= {2018}
+}
+
+@Article{	  andersen1973abductive,
+  author	= {Andersen, Henning},
+  journal	= {Language},
+  number	= {4},
+  pages		= {765--793},
+  title		= {Abductive and Deductive Change},
+  volume	= {49},
+  year		= {1973}
+}
+
+@Article{	  yang2012b,
+  author	= {Yang, Charles},
+  journal	= {Wiley Interdisciplinary Reviews: Cognitive Science},
+  number	= {2},
+  pages		= {205--213},
+  title		= {Computational models of syntactic acquisition},
+  volume	= {3},
+  year		= {2012}
+}
+
+@Article{	  yang2012,
+  author	= {Yang, Charles},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {16},
+  pages		= {6324--6327},
+  title		= {Ontogeny and phylogeny of language},
+  volume	= {110},
+  year		= {2013}
+}
+
+@Article{	  yang2018bilingualism,
+  author	= {Yang, Charles},
+  journal	= {Linguistic Approaches to Bilingualism},
+  number	= {6},
+  pages		= {665--706},
+  title		= {A formalist perspective on language acquisition},
+  volume	= {8},
+  year		= {2018}
+}
+
+@Article{	  collins2020labels,
+  author	= {Collins, Chris and Seely, T. Daniel},
+  title		= {Labeling without labels},
+  year		= {2017}
+}
+
+@Article{	  collins2017copies,
+  author	= {Collins, Chris and Groat, Erich},
+  title		= {Distinguishing Copies and Repetitions},
+  year		= {2017}
+}
+
+@InBook{	  boskovic2019coordinate,
+  author	= {Bo{\v s}kovi{\'c}, {\v Z}eljko},
+  booktitle	= {Rethinking Grammar: A Festschrift for Ian Roberts},
+  editor	= {Biberauer, Theresa and B{\'a}r{\'a}ny, Andr{\'a}s and
+		  Douglas, Jaime and Vikner, Sten},
+  title		= {On Unifying the Coordinate Structure Constraint and the
+		  Adjunct Condition},
+  year		= {2019}
+}
+
+@Article{	  dequadros2020code,
+  author	= {de Quadros, Ronice M{\"u}ller and Davidson, Kathryn and
+		  Lillo-Martin, Diane and Emmorey, Karen},
+  journal	= {Linguist Approaches Biling},
+  number	= {2},
+  pages		= {290--308},
+  title		= {Code-blending with depicting signs.},
+  volume	= {10},
+  year		= {2020}
+}
+
+@Book{		  slabakova2020,
+  author	= {Slabakova, Roumyana and Leal, Tania and Dudley, Amber and
+		  Stack, Micah},
+  pages		= {75},
+  publisher	= {Cambridge University Press},
+  title		= {Generative Second Language Acquisition},
+  year		= {2020}
+}
+
+@Book{		  ellis1997second,
+  author	= {Ellis, Rod},
+  pages		= {147},
+  publisher	= {Oxford University Press},
+  title		= {Second Language Acquisition},
+  year		= {1997}
+}
+
 @Article{	  wermke2017fundamental,
   author	= {Wermke, Kathleen and Ruan, Yufang and Feng, Yung and
 		  Dobnig, Daniela and Stephan, Sophia and Wermke, Peter and
@@ -67,7 +184,7 @@
   author	= {Uriagereka, Juan},
   journal	= {Inference Review},
   number	= {2},
-  title		= {Terms of EndearmentOn Language Evolution},
+  title		= {Terms of Endearment},
   volume	= {5},
   year		= {2020}
 }
