--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -21072,7 +21072,7 @@
 }
 
 @Article{	  yang2004universal-grammar-st,
-  author	= {Yang, Charles D.},
+  author	= {Yang, Charles},
   journal	= {Trends in Cognitive Sciences},
   number	= {10},
   pages		= {451--456},
@@ -40498,7 +40498,7 @@
 
 @Book{		  yang2016the-price-of-linguis,
   address	= {Cambridge, MA},
-  author	= {Yang, Charles D.},
+  author	= {Yang, Charles},
   publisher	= {The MIT Press},
   title		= {The price of linguistic productivity: how children learn
 		  to break the rules of language},
@@ -42462,14 +42462,6 @@
   year		= {2015}
 }
 
-@Book{		  yang2016the-price-of-li,
-  address	= {Cambridge, Massachusetts},
-  author	= {Yang, Charles D.},
-  publisher	= {The MIT Press},
-  title		= {The price of linguistic productivity: how children learn
-		  to break the rules of language},
-  year		= {2016}
-}
 
 @Article{	  despic2018a-cyclic-and-mu,
   author	= {Despi{\'c}, Miloje and Hamilton, Michael David and Murray,
