--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  pasquereau2020polar,
+  author	= {Pasquereau, J{\'e}r{\'e}my},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Polar response particles in French as remnants of
+		  ellipsis},
+  volume	= {5},
+  year		= {2020}
+}
+
+@InBook{	  chomsky1963formal,
+  address	= {New York},
+  author	= {Chomsky, Noam and Miller, George A.},
+  booktitle	= {Handbook of mathematical psychology. Volumen II},
+  editor	= {Ducan Luce, R. and Bush, Robert R. and Galanter, John},
+  pages		= {269-321},
+  publisher	= {John Wiley and Sons},
+  title		= {Introduction to the formal analysis of natural languages},
+  year		= {1963}
+}
+
 @Book{		  lasersohn2016subjectivity,
   author	= {Lasersohn, Peter},
   pages		= {304},
@@ -42461,7 +42482,6 @@
 		  learn a foreign language},
   year		= {2015}
 }
-
 
 @Article{	  despic2018a-cyclic-and-mu,
   author	= {Despi{\'c}, Miloje and Hamilton, Michael David and Murray,
