--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,65 @@
 
+@InBook{	  herslund1986double,
+  address	= {Dordrecht; Boston},
+  author	= {Herslund, M},
+  booktitle	= {Topics in Scandinavian syntax},
+  editor	= {Hellan, Lars and Christensen, Kirsti Koch},
+  publisher	= {D. Reidel},
+  title		= {The Double Object Construction in Danish},
+  year		= {1986}
+}
+
+@InBook{	  hellan1986anaphora,
+  address	= {Dordrecht; Boston},
+  author	= {Hellan, Lars},
+  booktitle	= {Topics in Scandinavian syntax},
+  editor	= {Hellan, Lars and Christensen, Kirsti Koch},
+  publisher	= {D. Reidel},
+  title		= {On Anaphora and predication in Norwegian},
+  year		= {1986}
+}
+
+@InBook{	  maling1986reflexives,
+  address	= {Dordrecht; Boston},
+  author	= {Maling, Joan},
+  booktitle	= {Topics in Scandinavian syntax},
+  editor	= {Hellan, Lars and Christensen, Kirsti Koch},
+  publisher	= {D. Reidel},
+  title		= {Clause-bound reflexives in Modern Icelandic},
+  year		= {1986}
+}
+
+@Book{		  hellan1986scandinavian,
+  address	= {Dordrecht; Boston},
+  editor	= {Hellan, Lars and Christensen, Kirsti Koch},
+  pages		= {273},
+  publisher	= {D. Reidel},
+  title		= {Topics in Scandinavian syntax},
+  volume	= {Studies in natural language and linguistic theory},
+  year		= {1986}
+}
+
+@Article{	  gallego2018projection,
+  author	= {Gallego, {\'A}ngel J.},
+  journal	= {The Linguistic Review},
+  number	= {4},
+  pages		= {601--623},
+  title		= {Projection without agreement},
+  volume	= {35},
+  year		= {2018}
+}
+
+@Article{	  merchant2019roots,
+  author	= {Merchant, Jason},
+  journal	= {The Linguistic Review},
+  number	= {3},
+  pages		= {325--341},
+  title		= {Roots don't select, categorial heads do: lexical-selection
+		  of PPs may vary by category},
+  volume	= {36},
+  year		= {2019}
+}
+
 @Article{	  pasquereau2020polar,
   author	= {Pasquereau, J{\'e}r{\'e}my},
   journal	= {Glossa: a journal of general linguistics},
@@ -456,7 +517,7 @@
 @Article{	  arregi2020specificational,
   author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
 		  Martina},
-  journal	= {Natural Language \& Linguistic Theory},
+  journal	= {Natural Language & Linguistic Theory},
   title		= {Three arguments for an individual concept analysis of
 		  specificational sentences},
   year		= {2020}
@@ -47219,13 +47280,6 @@
   author	= {Bates, Alandi and Pearl, Lisa},
   title		= {When socioeconomic status differences don't affect input
 		  quality: {Learning} complex syntactic knowledge},
-  year		= {2019}
-}
-
-@Unpublished{	  merchant2019roots-dont-sele,
-  author	= {Merchant, Jason},
-  title		= {Roots don't select, categorial heads do: lexical-selection
-		  of {PPs} may vary by category},
   year		= {2019}
 }
 
