--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -517,7 +517,7 @@
 @Article{	  arregi2020specificational,
   author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
 		  Martina},
-  journal	= {Natural Language & Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
   title		= {Three arguments for an individual concept analysis of
 		  specificational sentences},
   year		= {2020}
