--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,104 @@
 
+@Book{		  lebeaux2000acquisition,
+  author	= {Lebeaux, David},
+  pages		= {277},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Language Acquisition and the Form of the Grammar},
+  year		= {2000}
+}
+
+@Book{		  lebeaux2009binding,
+  author	= {Lebeaux, David},
+  pages		= {99},
+  publisher	= {MIT Press},
+  title		= {Where Does Binding Theory Apply},
+  year		= {2009}
+}
+
+@Book{		  butt2006case,
+  author	= {Butt, Miriam},
+  pages		= {258},
+  publisher	= {Cambridge University Press},
+  title		= {Theories of Case},
+  year		= {2006}
+}
+
+@Book{		  moreno-cabrera2010escritura,
+  address	= {Madrid},
+  author	= {Moreno-Cabrera, Juan Carlos},
+  publisher	= {S{\'i}ntesis},
+  title		= {Las lenguas y sus escrituras. Tipolog{\'i}a, evoluci{\'o}n
+		  e ideolog{\'i}a},
+  year		= {2010}
+}
+
+@Article{	  halle1985segmental,
+  author	= {Halle, Morris and Mohanan, K. P.},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {57--116},
+  title		= {Segmental Phonology of Modern English},
+  volume	= {16},
+  year		= {1985}
+}
+
+@Article{	  grestenberger2019deponency,
+  author	= {Grestenberger, Laura},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Deponency in Morphology},
+  year		= {2019}
+}
+
+@Article{	  veselinova2017suppletion,
+  author	= {Veselinova, Ljuba N.},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Suppletion},
+  year		= {2017}
+}
+
+@Article{	  stump2017inflectional,
+  author	= {Stump, Gregory},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Inflectional Morphology},
+  year		= {2017}
+}
+
+@Article{	  caha2019syncretism,
+  author	= {Caha, Pavel},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Syncretism in Morphology},
+  year		= {2019}
+}
+
+@Article{	  kornfilt2020parts,
+  author	= {Kornfilt, Jaklin},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Parts of Speech, Lexical Categories, and Word Classes in
+		  Morphology},
+  year		= {2020}
+}
+
+@Article{	  bauer2018morph,
+  author	= {Bauer, Laurie},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Morphological Entities: Overview and General Issues},
+  year		= {2018}
+}
+
+@Article{	  bobaljik2017dm,
+  author	= {Bobaljik, Jonathan David},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Distributed Morphology},
+  year		= {2017}
+}
+
+@Article{	  dahl2018zero,
+  author	= {Dahl, Eystein and F{\'a}bregas, Antonio},
+  journal	= {Oxford Research Encyclopedia in Linguistics},
+  title		= {Zero Morphemes},
+  year		= {2018}
+}
+
 @InBook{	  herslund1986double,
   address	= {Dordrecht; Boston},
   author	= {Herslund, M},
@@ -5404,17 +5504,6 @@
   volume	= {5},
   year		= {2011},
   doi		= {10.1111/j.1749-818X.2011.00293.x}
-}
-
-@Article{	  muller2013approaches-to-d,
-  author	= {M{\"u}ller, Gereon},
-  journal	= {Language and Linguistics Compass},
-  number	= {6},
-  pages		= {351--369},
-  title		= {Approaches to {Deponency}},
-  volume	= {7},
-  year		= {2013},
-  doi		= {10.1111/lnc3.12029}
 }
 
 @Article{	  progovac2013non-sentential-,
