--- a/curso-2019.bib
+++ b/curso-2019.bib
@@ -1,3 +1,16 @@
+@Book{Cabeza2020Signos,
+author = {Cabeza Pereiro, María del Carmen}, 
+title = {Fundamentos de las lenguas de signos}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {Síntesis}, 
+address = {Madrid}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {curso-lengua; Sign language}}
+
+
 @Book{2012The-handbook-of-Hisp,
 author = {}, 
 title = {The handbook of Hispanic linguistics}, 
@@ -23,7 +36,7 @@ year = {2016},
 abstract = {}, 
 keywords = {History, Romance languages, Spanish language, Dictionaries, Encyclopedias and dictionaries, Spanish, Romance philology, Spanish philology}}
 
-	
+
 
 @Book{Escandell-Vidal2014Claves-del-leng,
 author = {Escandell-Vidal, María Victoria}, 
