result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,28 @@
+@Article{Bazaco2020Nominal,
+author = {Bazaco, Carmelo and González-Rivera, Melvin}, 
+title = {Nominal predication with estar}, 
+journal = {Studies in Hispanic and Lusophone Linguistics}, 
+volume = {13}, 
+number = {2}, 
+pages = {}, 
+year = {}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative; predicate; predication}}
+
+@Book{Moro2018Be,
+author = {Moro, Andrea}, 
+title = {A Brief History of the Verb To Be}, 
+volume = {}, 
+pages = {304}, 
+editor = {}, 
+publisher = {MIT Press}, 
+address = {}, 
+year = {2018}, 
+abstract = {}, 
+keywords = {Copula; Copulative; Predication}}
+
+
 @Article{Arregi2020Specificational,
 author = {Arregi, Karlos and Francez, Itamar and Martinović, Martina}, 
 title = {Three arguments for an individual concept analysis of specificational sentences}, 
