--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,57 @@
 
+@Article{	  bazaco2020nominal,
+  author	= {Bazaco, Carmelo and Gonz{\'a}lez-Rivera, Melvin},
+  journal	= {Studies in Hispanic and Lusophone Linguistics},
+  number	= {2},
+  title		= {Nominal predication with estar},
+  volume	= {13}
+}
+
+@Article{	  bonet2006conj,
+  author	= {Bonet, Eul{\`a}lia and Mascar{\'o}, Joan},
+  journal	= {Cuadernos de Ling{\"u}{\'i}stica del I. U. I. Ortega y
+		  Gasset},
+  pages		= {1--8},
+  title		= {U u o e y o e},
+  volume	= {13},
+  year		= {2006}
+}
+
+@Article{	  romain2020clitics,
+  author	= {Romain, Ian James},
+  journal	= {The Linguistic Review},
+  number	= {3},
+  pages		= {359--391},
+  title		= {Deriving clitic cluster formation through movement: A
+		  dialectal case study from Spanish},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Book{		  asudeh2020enriched,
+  author	= {Asudeh, Ash and Giorgolo, Gianluca},
+  pages		= {192},
+  publisher	= {Oxford University Press, USA},
+  title		= {Enriched Meanings},
+  year		= {2020}
+}
+
+@Book{		  cabeza2020signos,
+  address	= {Madrid},
+  author	= {Cabeza Pereiro, Mar{\'i}a del Carmen},
+  publisher	= {S{\'i}ntesis},
+  title		= {Fundamentos de las lenguas de signos},
+  year		= {2020}
+}
+
+@Book{		  sanchez2020modalidades,
+  address	= {Madrid},
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  publisher	= {S{\'i}ntesis},
+  title		= {Las modalidades oracionales},
+  year		= {2020}
+}
+
 @Book{		  lebeaux2000acquisition,
   author	= {Lebeaux, David},
   pages		= {277},
