--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  portner2020desire,
+  author	= {Portner, Paul and Rubinstein, Aynat},
+  journal	= {Natural Language Semantics},
+  title		= {Desire, belief, and semantic composition: variation in
+		  mood selection with desire predicates},
+  year		= {2020}
+}
+
+@Article{	  chung2020intrusion,
+  author	= {Chung, Sandra and Wagers, Matthew W.},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {On the universality of intrusive resumption: Evidence from
+		  Chamorro and Palauan},
+  year		= {2020}
+}
+
 @Article{	  bazaco2020nominal,
   author	= {Bazaco, Carmelo and Gonz{\'a}lez-Rivera, Melvin},
   journal	= {Studies in Hispanic and Lusophone Linguistics},
