--- a/copulative.bib
+++ b/copulative.bib
@@ -5,7 +5,7 @@ journal = {Studies in Hispanic and Lusophone Linguistics},
 volume = {13}, 
 number = {2}, 
 pages = {}, 
-year = {}, 
+year = {2020}, 
 abstract = {}, 
 location = {}, 
 keywords = {copula; copulative; predicate; predication}}
