--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,66 @@
 
+@Article{	  neeleman2007pronouns,
+  author	= {Neeleman, Ad and Szendr{\"o}i, Kriszta},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  title		= {Radical Pro Drop and the Morphology of Pronouns},
+  volume	= {38},
+  year		= {2007}
+}
+
+@InBook{	  embick2005stems,
+  address	= {Amsterdam},
+  author	= {Embick, David and Halle, Morris},
+  booktitle	= {Romance languages and linguistic theory 2003: Selected
+		  papers from Going Romance 2003},
+  pages		= {59-88},
+  publisher	= {John Benjamins},
+  title		= {On the status of stems in morphological theory},
+  year		= {2005}
+}
+
+@InBook{	  embick2012contextual,
+  address	= {Amsterdam},
+  author	= {Embick, David},
+  booktitle	= {Romance languages and linguistic theory 2010: Selected
+		  papers from Going Romance Leiden 2010},
+  editor	= {Franco, Irene and Lusini, Sara and Saab, Andr{\'e}s},
+  pages		= {21-40},
+  publisher	= {John Benjamins},
+  title		= {Contextual conditions on stem alternations: Illustrations
+		  from the Spanish conjugation},
+  year		= {2012}
+}
+
+@Article{	  corbett2007suppletion,
+  author	= {Corbett, Greville G.},
+  journal	= {Language},
+  number	= {1},
+  pages		= {8--42},
+  title		= {Canonical Typology, Suppletion, and Possible Words},
+  volume	= {83},
+  year		= {2007}
+}
+
+@InBook{	  chomsky2014recursion,
+  author	= {Chomsky, Noam},
+  booktitle	= {Recursion: Complexity in Cognition},
+  editor	= {Roeper, Tom and Speas, Margaret},
+  publisher	= {Springer International Publishing},
+  title		= {Minimal Recursion: Exploring the Prospects},
+  year		= {2014}
+}
+
+@InBook{	  stabler2014recursion,
+  author	= {Stabler, Edward},
+  booktitle	= {Recursion: Complexity in Cognition},
+  editor	= {Roeper, Tom and Speas, Margaret},
+  pages		= {159-179},
+  publisher	= {Springer International Publishing},
+  title		= {Recursion in grammar and performance},
+  year		= {2014}
+}
+
 @Article{	  portner2020desire,
   author	= {Portner, Paul and Rubinstein, Aynat},
   journal	= {Natural Language Semantics},
