--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  giannakidou2009temporal,
+  author	= {Giannakidou, Anastasia},
+  journal	= {Lingua},
+  number	= {12},
+  pages		= {1883--1908},
+  title		= {The dependency of the subjunctive revisited: Temporal
+		  semantics and polarity},
+  volume	= {119},
+  year		= {2009}
+}
+
 @Article{	  neeleman2007pronouns,
   author	= {Neeleman, Ad and Szendr{\"o}i, Kriszta},
   journal	= {Linguistic Inquiry},
