--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,108 @@
 
+@Article{	  wei2020,
+  author	= {Wei, Wei and Walker, Rachel},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {845--859},
+  title		= {A Lookahead Effect in Mbe Reduplication: Implications for
+		  Harmonic Serialism},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  bailyn2020,
+  author	= {Bailyn, John Frederick},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {635--669},
+  title		= {The Scrambling Paradox},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  rudnev2020,
+  author	= {Rudnev, Pavel},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {829--844},
+  title		= {Agreeing Adpositions in Avar and The
+		  Directionality-of-Valuation Debate},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  mayer2020,
+  author	= {Mayer, Connor and Daland, Robert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {725--763},
+  title		= {A Method for Projecting Features from Observed Sets of
+		  Phonological Classes},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  ganenkov2020,
+  author	= {Ganenkov, Dmitry},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {785--798},
+  title		= {Missing Elsewhere: Domain Extension in Contextual
+		  Allomorphy},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  delbusso2020,
+  author	= {DelBusso, Natalie},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {765--784},
+  title		= {The Final-over-Final Condition, Stringency, and
+		  Typological Structure},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  reuland2020,
+  author	= {Reuland, Eric and Wong, Sally Chi Ho and Everaert,
+		  Martin},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {799--814},
+  title		= {How the Complexity of Mandarin Zi-ji Simplifies the
+		  Grammar},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  romoli2020,
+  author	= {Romoli, Jacopo and Mandelkern, Matthew},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {815--828},
+  title		= {What's Not to Like},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  charnavel2020,
+  author	= {Charnavel, Isabelle},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {671--723},
+  title		= {Logophoricity and Locality: A View from French Anaphors},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  homer2020pi,
+  author	= {Homer, Vincent},
+  journal	= {Journal of Semantics},
+  title		= {Domains of Polarity Items},
+  year		= {2020}
+}
+
 @Article{	  giannakidou2009temporal,
   author	= {Giannakidou, Anastasia},
   journal	= {Lingua},
@@ -26037,6 +26141,7 @@
   title		= {The role of linguistic and environmental factors on
 		  grammatical development in French children with cochlear
 		  implants},
+  year		= {2013},
   doi		= {10.1016/j.lingua.2013.02.012}
 }
 
@@ -38490,7 +38595,7 @@
   booktitle	= {Historia de la edici{\'o}n en {Espa{\~n}a} (1939-1975)},
   journal	= {Ling{\"u}{\'i}stica en la Red},
   publisher	= {Marcial Pons Historia},
-  title		= {¿Qu{\'e} relaci{\'o}n hay entre el cambio
+  title		= {?`Qu{\'e} relaci{\'o}n hay entre el cambio
 		  ling{\"u}{\'i}stico y la evoluci{\'o}n del lenguaje?},
   year		= {2016}
 }
@@ -43285,7 +43390,7 @@
 
 @Misc{		  mendivil-giro2018gramatica-una-,
   author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
-  title		= {Gram{\'a}tica: ¿una ciencia de pacotilla?},
+  title		= {Gram{\'a}tica: ?`Una ciencia de pacotilla?},
   year		= {2018}
 }
 
@@ -43293,7 +43398,7 @@
   author	= {Moreno-Cabrera, Juan Carlos and Mend{\'i}vil-Gir{\'o},
 		  Jos{\'e}-Luis},
   journal	= {Zaragoza Ling{\"u}{\'i}stica},
-  title		= {Pero, qu{\'e} es una lengua?},
+  title		= {Pero, ?` qu{\'e} es una lengua?},
   year		= {2017}
 }
 
@@ -47793,7 +47898,7 @@
   journal	= {Los lindes de la morfolog{\'i}a. Anexos de Revista de
 		  Lexicograf{\'i}a, 37, Universidade da Coru{\~n}a, A
 		  Coru{\~n}a, pp. 173-186},
-  title		= {¿{De} d{\'o}nde vienen los morfemas? {Una}
+  title		= {?`{De} d{\'o}nde vienen los morfemas? {Una}
 		  explicaci{\'o}n moderna para una intuici{\'o}n antigua}
 }
 
