--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  mcconnell-ginet1982adverbs,
+  author	= {McConnell-Ginet, Sally},
+  journal	= {Language},
+  number	= {1},
+  pages		= {144--184},
+  title		= {Adverbs and Logical Form: A Linguistically Realistic
+		  Theory},
+  volume	= {58},
+  year		= {1982}
+}
+
+@PhDThesis{	  larson1983restrictive,
+  address	= {Madison, Wis.},
+  author	= {Larson, Richard K.},
+  school	= {University of Wisconsin},
+  title		= {Restrictive Modfication},
+  year		= {1983}
+}
+
+@InBook{	  partee1974opacity,
+  address	= {New York},
+  author	= {Partee, Barbara H},
+  booktitle	= {Semantics and Philosophy},
+  editor	= {Munitz, M. and Unger, P.},
+  pages		= {81-101},
+  publisher	= {New York University Press},
+  title		= {Opacity and Scope},
+  year		= {1974}
+}
+
 @Article{	  wei2020,
   author	= {Wei, Wei and Walker, Rachel},
   journal	= {Linguistic Inquiry},
@@ -6758,11 +6788,11 @@
   address	= {Paris},
   author	= {F{\'a}bregas, Antonio and Leferman, Brian and Mar{\'i}n,
 		  Rafael},
-  booktitle	= {Proceedings of {{Sinn}} Und {{Bedeutung}} 17 ,},
+  booktitle	= {Proceedings of {Sinn} Und {Bedeutung} 17},
   editor	= {Homer, Vincent and Chemla, Emmanuel and Winterstein,
 		  Gr{\'e}goire},
   pages		= {237--253},
-  publisher	= {{{\'E}cole Normale Sup{\'e}rieure}},
+  publisher	= {{\'E}cole Normale Sup{\'e}rieure},
   title		= {Evaluative Adjectives Are {{Davidsonian}} States},
   year		= {2012},
   timestamp	= {2017-10-02T05:15:58Z}
@@ -35478,13 +35508,6 @@
   editor	= {Zalta, Edward N.},
   title		= {Situations in {Natural} {Language} {Semantics}},
   year		= {2014}
-}
-
-@Misc{		  deutschhow-close-are-we-to-,
-  author	= {Deutsch, David},
-  journal	= {Aeon},
-  title		= {How close are we to creating artificial intelligence? ---
-		  {David} {Deutsch} --- {Aeon} {Essays}}
 }
 
 @Misc{		  levensonwhen-does-science-fi,
