result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,44 @@
+@Book{Stassen1997Intransitive,
+author = {Stassen, Leon}, 
+title = {Intransitive predication}, 
+volume = {Oxford studies in typology and linguistic theory}, 
+pages = {771}, 
+editor = {}, 
+publisher = {Clarendon Press; Oxford University Press}, 
+address = {Oxford [England]: New York}, 
+year = {1997}, 
+abstract = {}, 
+keywords = {Copula; Predication; Predicate; Copulative}}
+
+
+
+@Book{Wetzer1996Adjectival,
+author = {Wetzer, Harrie}, 
+title = {The typology of adjectival predication}, 
+volume = {Empirical approaches to language typology; 17}, 
+pages = {398}, 
+editor = {}, 
+publisher = {Mouton de Gruyter}, 
+address = {Berlin; New York}, 
+year = {1996}, 
+abstract = {}, 
+keywords = {Adjective; Predication; Copula; Copulative}}
+
+
+
+@Book{Baker2003Lexical,
+author = {Baker, Mark C.}, 
+title = {Lexical categories: verbs, nouns, and adjectives}, 
+volume = {Cambridge studies in linguistics}, 
+pages = {353}, 
+editor = {}, 
+publisher = {Cambridge University Press}, 
+address = {Cambridge, UK; New York}, 
+year = {2003}, 
+abstract = {}, 
+keywords = {Parts of speech; Noun; Verb; Adjective; Grammatical categories; Curso-sintaxis; copula; copulative}}
+
+
 @Article{Bazaco2020Nominal,
 author = {Bazaco, Carmelo and González-Rivera, Melvin}, 
 title = {Nominal predication with estar}, 
