--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Book{		  stassen1997intransitive,
+  address	= {Oxford [England]: New York},
+  author	= {Stassen, Leon},
+  pages		= {771},
+  publisher	= {Clarendon Press; Oxford University Press},
+  title		= {Intransitive predication},
+  volume	= {Oxford studies in typology and linguistic theory},
+  year		= {1997}
+}
+
+@Book{		  wetzer1996adjectival,
+  address	= {Berlin; New York},
+  author	= {Wetzer, Harrie},
+  pages		= {398},
+  publisher	= {Mouton de Gruyter},
+  title		= {The typology of adjectival predication},
+  volume	= {Empirical approaches to language typology; 17},
+  year		= {1996}
+}
+
+@Article{	  saito1998order,
+  author	= {Saito, Mamoru and Fukui, Naoki},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {439--474},
+  title		= {Order in Phrase Structure and Movement},
+  volume	= {29},
+  year		= {1998}
+}
+
 @Article{	  mcconnell-ginet1982adverbs,
   author	= {McConnell-Ginet, Sally},
   journal	= {Language},
