--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@Article{	  halle2005palatization,
+  author	= {Halle, Morris},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {23--41},
+  title		= {Palatalization/Velar Softening: What It Is and What It
+		  Tells Us about the Nature of Language},
+  volume	= {36},
+  year		= {2005}
+}
+
+@Article{	  keating1988underspecification,
+  author	= {Keating, Patricia A.},
+  journal	= {Phonology},
+  number	= {2},
+  pages		= {275--292},
+  title		= {Underspecification in Phonetics},
+  volume	= {5},
+  year		= {1988}
+}
+
+@InBook{	  hale2015phonologization,
+  address	= {Oxford, United Kingdom},
+  author	= {Hale, Mark and Kissock, Madelyn J. and Reiss, Charles},
+  booktitle	= {The Oxford handbook of historical phonology},
+  editor	= {Honeybone, Patrick and Salmons, Joe},
+  publisher	= {Oxford University Press},
+  title		= {An I-Language Approach to Phonologization and
+		  Lexification},
+  year		= {2015}
+}
+
 @Book{		  stassen1997intransitive,
   address	= {Oxford [England]: New York},
   author	= {Stassen, Leon},
