--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@InBook{	  chomsky1963finitary,
+  address	= {New York},
+  author	= {Chomsky, Noam and Miller, George A.},
+  booktitle	= {Handbook of mathematical psychology. Volumen II},
+  editor	= {Ducan Luce, R. and Bush, Robert R. and Galanter, John},
+  pages		= {419-491},
+  publisher	= {John Wiley and Sons},
+  title		= {Finitary Models of Language Users},
+  year		= {1963}
+}
+
+@Article{	  sprouse2018colorless,
+  author	= {Sprouse, Jon and Yankama, Beracah and Indurkhya, Sagar and
+		  Fong, Sandiway and Berwick, Robert C.},
+  journal	= {The Linguistic Review},
+  number	= {3},
+  pages		= {575--599},
+  title		= {Colorless green ideas do sleep furiously: gradient
+		  acceptability and the nature of the grammar},
+  volume	= {35},
+  year		= {2018}
+}
+
+@Article{	  white2020frequency,
+  author	= {White, Aaron Steven and Rawlins, Kyle},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {105},
+  title		= {Frequency, acceptability, and selection: A case study of
+		  clause-embedding},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Article{	  halle2005palatization,
   author	= {Halle, Morris},
   journal	= {Linguistic Inquiry},
